Upto sept22 added

--- a/UserInputControlesTest/app/src/main/res/layout/activity_main.xml
+++ b/UserInputControlesTest/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,12 @@
         android:id="@+id/pythonCheckbox"
         />
 
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:entries="@array/branch"
+        />
 
     <Button
         android:layout_width="match_parent"
